Finish inital HTML markup

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="color-scheme" content="light dark">
 
 	<!-- Favicons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
@@ -15,66 +16,209 @@
 
 <body>
 
+<div class="container">
+	<header>
+		<div>
+			<h1>Social Media Dashboard</h1>
+			<p>Total Followers: 23,004</p>
+		</div>
 
-Social Media Dashboard
-Total Followers: 23,004
+		<hr>
 
-Dark Mode
+		<div>
+			<label for="checkbox">Dark Mode</label>
+			<input type="checkbox" id="checkbox">
+		</div>
+	</header>
 
-@nathanf
-1987
-Followers
-12 Today
+	<main>
+		<section class="followers">
+			<div class="followers-card">
+				<img src="/images/icon-facebook.svg" alt="">
+				<span>@nathanf</span>
 
-@nathanf
-1044
-Followers
-99 Today
+				<p>1987</p>
+				<p>FOLLOWERS</p>
 
-@realnathanf
-11k
-Followers
-1099 Today
+				<img src="/images/icon-up.svg" alt="">
+				<span>12 Today</span>
+			</div>
 
-Nathan F.
-8239
-Subscribers
-144 Today
+			<div class="followers-card">
+				<img src="/images/icon-twitter.svg" alt="">
+				<span>@nathanf</span>
 
+				<p>1044</p>
+				<p>FOLLOWERS</p>
 
-Overview - Today
+				<img src="/images/icon-up.svg" alt="">
+				<span>99 Today</span>
+			</div>
 
-Page Views
-87
-3%
+			<div class="followers-card">
+				<img src="/images/icon-instagram.svg" alt="">
+				<span>@realnathanf</span>
 
-Likes
-52
-2%
+				<p>11k</p>
+				<p>FOLLOWERS</p>
 
-Likes
-5462
-2257%
+				<img src="/images/icon-up.svg" alt="">
+				<span>1099 Today</span>
+			</div>
 
-Profile Views
-52k
-1375%
+			<div class="followers-card">
+				<img src="/images/icon-youtube.svg" alt="">
+				<span>Nathan F.</span>
 
-Retweets
-117
-303%
+				<p>8239</p>
+				<p>FOLLOWERS</p>
 
-Likes
-507
-553%
+				<img src="/images/icon-down.svg" alt="">
+				<span>144 Today</span>
+			</div>
+		</section>
 
-Likes
-107
-19%
+		<section class="overview">
+			<h2>Overview - Today</h2>
 
-Total Views
-1407
-12%
+			<div class="overview-card">
+				<div>
+					<span>Page Views</span>
+					<img src="/images/icon-facebook.svg" alt="">
+				</div>
+
+				<div>
+					<span>87</span>
+					<p>
+						<img src="/images/icon-up.svg" alt="">
+						3%
+					</p>
+				</div>
+			</div>
+
+			<div class="overview-card">
+				<div>
+					<span>Likes</span>
+					<img src="/images/icon-facebook.svg" alt="">
+				</div>
+
+				<div>
+					<span>52</span>
+					<p>
+						<img src="/images/icon-down.svg" alt="">
+						2%
+					</p>
+				</div>
+			</div>
+
+			<div class="overview-card">
+				<div>
+					<span>Likes</span>
+					<img src="/images/icon-instagram.svg" alt="">
+				</div>
+
+				<div>
+					<span>5462</span>
+					<p>
+						<img src="/images/icon-up.svg" alt="">
+						2257%
+					</p>
+				</div>
+			</div>
+
+			<div class="overview-card">
+				<div>
+					<span>Profile Views</span>
+					<img src="/images/icon-instagram.svg" alt="">
+				</div>
+
+				<div>
+					<span>52k</span>
+					<p>
+						<img src="/images/icon-up.svg" alt="">
+						1375%
+					</p>
+				</div>
+			</div>
+
+			<div class="overview-card">
+				<div>
+					<span>Retweets</span>
+					<img src="/images/icon-twitter.svg" alt="">
+				</div>
+
+				<div>
+					<span>117</span>
+					<p>
+						<img src="/images/icon-up.svg" alt="">
+						303%
+					</p>
+				</div>
+			</div>
+
+			<div class="overview-card">
+				<div>
+					<span>Likes</span>
+					<img src="/images/icon-twitter.svg" alt="">
+				</div>
+
+				<div>
+					<span>507</span>
+					<p>
+						<img src="/images/icon-up.svg" alt="">
+						553%
+					</p>
+				</div>
+			</div>
+
+			<div class="overview-card">
+				<div>
+					<span>Likes</span>
+					<img src="/images/icon-twitter.svg" alt="">
+				</div>
+
+				<div>
+					<span>507</span>
+					<p>
+						<img src="/images/icon-up.svg" alt="">
+						553%
+					</p>
+				</div>
+			</div>
+
+			<div class="overview-card">
+				<div>
+					<span>Likes</span>
+					<img src="/images/icon-youtube.svg" alt="">
+				</div>
+
+				<div>
+					<span>107</span>
+					<p>
+						<img src="/images/icon-down.svg" alt="">
+						19%
+					</p>
+				</div>
+			</div>
+
+			<div class="overview-card">
+				<div>
+					<span>Total Views</span>
+					<img src="/images/icon-youtube.svg" alt="">
+				</div>
+
+				<div>
+					<span>1407</span>
+					<p>
+						<img src="/images/icon-down.svg" alt="">
+						12%
+					</p>
+				</div>
+			</div>
+		</section>
+	</main>
+</div>
+
 </body>
 
 </html>
