--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
 <div class="container">
 	<header>
-		<div>
-			<h1>Social Media Dashboard</h1>
-			<p>Total Followers: 23,004</p>
+		<div class="headings">
+			<h1 class="main-heading">Social Media Dashboard</h1>
+			<p class="sub-heading">Total Followers: 23,004</p>
 		</div>
 
 		<hr>
 
-		<div>
+		<div class="theme-toggle">
 			<label for="checkbox">Dark Mode</label>
 			<input type="checkbox" id="checkbox">
 		</div>
@@ -33,48 +33,64 @@
 
 	<main>
 		<section class="followers">
-			<div class="followers-card">
-				<img src="/images/icon-facebook.svg" alt="">
-				<span>@nathanf</span>
+			<div class="followers-card followers-card--blue">
+				<div class="followers-card__group followers-card__handle">
+					<img src="/images/icon-facebook.svg" alt="">
+					<span>@nathanf</span>
+				</div>
 
-				<p>1987</p>
-				<p>FOLLOWERS</p>
+				<p class="followers-card__number">1987</p>
+				<p class="followers-card__type">FOLLOWERS</p>
 
-				<img src="/images/icon-up.svg" alt="">
-				<span>12 Today</span>
+				<div class="followers-card__group followers-card__update">
+					<img src="/images/icon-up.svg" alt="">
+					<span class="followers-card__success">12 Today</span>
+				</div>
+			</div>
+
+			<div class="followers-card followers-card--light-blue">
+				<div class="followers-card__group followers-card__handle">
+					<img src="/images/icon-twitter.svg" alt="">
+					<span>@nathanf</span>
+				</div>
+
+				<p class="followers-card__number">1044</p>
+				<p class="followers-card__type">FOLLOWERS</p>
+
+				<div class="followers-card__group followers-card__update">
+					<img src="/images/icon-up.svg" alt="">
+					<span class="followers-card__success">99 Today</span>
+				</div>
 			</div>
 
 			<div class="followers-card">
-				<img src="/images/icon-twitter.svg" alt="">
-				<span>@nathanf</span>
+				<div class="followers-card__group followers-card__handle">
+					<img src="/images/icon-instagram.svg" alt="">
+					<span>@realnathanf</span>
+				</div>
 
-				<p>1044</p>
-				<p>FOLLOWERS</p>
+				<p class="followers-card__number">11k</p>
+				<p class="followers-card__type">FOLLOWERS</p>
 
-				<img src="/images/icon-up.svg" alt="">
-				<span>99 Today</span>
+				<div class="followers-card__group followers-card__update">
+					<img src="/images/icon-up.svg" alt="">
+					<span class="followers-card__success">1099 Today</span>
+				</div>
 			</div>
 
-			<div class="followers-card">
-				<img src="/images/icon-instagram.svg" alt="">
-				<span>@realnathanf</span>
+			<div class="followers-card followers-card--red">
+				<div class="followers-card__group followers-card__handle">
+					<img src="/images/icon-youtube.svg" alt="">
+					<span>Nathan F.</span>
+				</div>
 
-				<p>11k</p>
-				<p>FOLLOWERS</p>
+				<p class="followers-card__number">8239</p>
+				<p class="followers-card__type">FOLLOWERS</p>
 
-				<img src="/images/icon-up.svg" alt="">
-				<span>1099 Today</span>
-			</div>
-
-			<div class="followers-card">
-				<img src="/images/icon-youtube.svg" alt="">
-				<span>Nathan F.</span>
-
-				<p>8239</p>
-				<p>FOLLOWERS</p>
-
-				<img src="/images/icon-down.svg" alt="">
-				<span>144 Today</span>
+				<div class="followers-card__group followers-card__update">
+					<img src="/images/icon-down.svg" alt="">
+					<span class="followers-card__fail">144 Today</span>
+				</div>
 			</div>
 		</section>
 
@@ -219,6 +235,7 @@
 	</main>
 </div>
 
+<script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
