Complete Overview section styles

--- a/index.html
+++ b/index.html
@@ -95,140 +95,127 @@
 		</section>
 
 		<section class="overview">
-			<h2>Overview - Today</h2>
+			<h2 class="overview__heading">Overview - Today</h2>
 
-			<div class="overview-card">
-				<div>
-					<span>Page Views</span>
-					<img src="/images/icon-facebook.svg" alt="">
+			<div class="overview__grid">
+				<div class="overview-card">
+					<div class="overview-card__group">
+						<span>Page Views</span>
+						<img src="/images/icon-facebook.svg" alt="">
+					</div>
+
+					<div class="overview-card__group">
+						<span class="overview-card__number">87</span>
+						<div class="overview-card__group overview-card__percentage">
+							<img src="/images/icon-up.svg" alt="">
+							<p class="overview-card__success">3%</p>
+						</div>
+					</div>
 				</div>
 
-				<div>
-					<span>87</span>
-					<p>
-						<img src="/images/icon-up.svg" alt="">
-						3%
-					</p>
-				</div>
-			</div>
+				<div class="overview-card">
+					<div class="overview-card__group">
+						<span>Likes</span>
+						<img src="/images/icon-facebook.svg" alt="">
+					</div>
 
-			<div class="overview-card">
-				<div>
-					<span>Likes</span>
-					<img src="/images/icon-facebook.svg" alt="">
-				</div>
-
-				<div>
-					<span>52</span>
-					<p>
-						<img src="/images/icon-down.svg" alt="">
-						2%
-					</p>
-				</div>
-			</div>
-
-			<div class="overview-card">
-				<div>
-					<span>Likes</span>
-					<img src="/images/icon-instagram.svg" alt="">
+					<div class="overview-card__group">
+						<span class="overview-card__number">52</span>
+						<div class="overview-card__group overview-card__percentage">
+							<img src="/images/icon-down.svg" alt="">
+							<p class="overview-card__fail">2%</p>
+						</div>
+					</div>
 				</div>
 
-				<div>
-					<span>5462</span>
-					<p>
-						<img src="/images/icon-up.svg" alt="">
-						2257%
-					</p>
-				</div>
-			</div>
+				<div class="overview-card">
+					<div class="overview-card__group">
+						<span>Likes</span>
+						<img src="/images/icon-instagram.svg" alt="">
+					</div>
 
-			<div class="overview-card">
-				<div>
-					<span>Profile Views</span>
-					<img src="/images/icon-instagram.svg" alt="">
-				</div>
-
-				<div>
-					<span>52k</span>
-					<p>
-						<img src="/images/icon-up.svg" alt="">
-						1375%
-					</p>
-				</div>
-			</div>
-
-			<div class="overview-card">
-				<div>
-					<span>Retweets</span>
-					<img src="/images/icon-twitter.svg" alt="">
+					<div class="overview-card__group">
+						<span class="overview-card__number">5462</span>
+						<div class="overview-card__group overview-card__percentage">
+							<img src="/images/icon-up.svg" alt="">
+							<p class="overview-card__success">2257%</p>
+						</div>
+					</div>
 				</div>
 
-				<div>
-					<span>117</span>
-					<p>
-						<img src="/images/icon-up.svg" alt="">
-						303%
-					</p>
-				</div>
-			</div>
+				<div class="overview-card">
+					<div class="overview-card__group">
+						<span>Profile Views</span>
+						<img src="/images/icon-instagram.svg" alt="">
+					</div>
 
-			<div class="overview-card">
-				<div>
-					<span>Likes</span>
-					<img src="/images/icon-twitter.svg" alt="">
-				</div>
-
-				<div>
-					<span>507</span>
-					<p>
-						<img src="/images/icon-up.svg" alt="">
-						553%
-					</p>
-				</div>
-			</div>
-
-			<div class="overview-card">
-				<div>
-					<span>Likes</span>
-					<img src="/images/icon-twitter.svg" alt="">
+					<div class="overview-card__group">
+						<span class="overview-card__number">52k</span>
+						<div class="overview-card__group overview-card__percentage">
+							<img src="/images/icon-up.svg" alt="">
+							<p class="overview-card__success">1375%</p>
+						</div>
+					</div>
 				</div>
 
-				<div>
-					<span>507</span>
-					<p>
-						<img src="/images/icon-up.svg" alt="">
-						553%
-					</p>
-				</div>
-			</div>
+				<div class="overview-card">
+					<div class="overview-card__group">
+						<span>Retweets</span>
+						<img src="/images/icon-twitter.svg" alt="">
+					</div>
 
-			<div class="overview-card">
-				<div>
-					<span>Likes</span>
-					<img src="/images/icon-youtube.svg" alt="">
-				</div>
-
-				<div>
-					<span>107</span>
-					<p>
-						<img src="/images/icon-down.svg" alt="">
-						19%
-					</p>
-				</div>
-			</div>
-
-			<div class="overview-card">
-				<div>
-					<span>Total Views</span>
-					<img src="/images/icon-youtube.svg" alt="">
+					<div class="overview-card__group">
+						<span class="overview-card__number">117</span>
+						<div class="overview-card__group overview-card__percentage">
+							<img src="/images/icon-up.svg" alt="">
+							<p class="overview-card__success">303%</p>
+						</div>
+					</div>
 				</div>
 
-				<div>
-					<span>1407</span>
-					<p>
-						<img src="/images/icon-down.svg" alt="">
-						12%
-					</p>
+				<div class="overview-card">
+					<div class="overview-card__group">
+						<span>Likes</span>
+						<img src="/images/icon-twitter.svg" alt="">
+					</div>
+
+					<div class="overview-card__group">
+						<span class="overview-card__number">507</span>
+						<div class="overview-card__group overview-card__percentage">
+							<img src="/images/icon-up.svg" alt="">
+							<p class="overview-card__success">553%</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="overview-card">
+					<div class="overview-card__group">
+						<span>Likes</span>
+						<img src="/images/icon-youtube.svg" alt="">
+					</div>
+
+					<div class="overview-card__group">
+						<span class="overview-card__number">107</span>
+						<div class="overview-card__group overview-card__percentage">
+							<img src="/images/icon-down.svg" alt="">
+							<p class="overview-card__fail">19%</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="overview-card">
+					<div class="overview-card__group">
+						<span>Total Views</span>
+						<img src="/images/icon-youtube.svg" alt="">
+					</div>
+
+					<div class="overview-card__group">
+						<span class="overview-card__number">1407</span>
+						<div class="overview-card__group overview-card__percentage">
+							<img src="/images/icon-down.svg" alt="">
+							<p class="overview-card__fail">12%</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
