--- a/index.html
+++ b/index.html
@@ -220,6 +220,12 @@
 			</div>
 		</section>
 	</main>
+
+	<footer>
+		<a href="https://github.com/robinjmm/social-media-dashboard" target="_blank" title="GitHub Repo Link">
+			<i class="fa-brands fa-github"></i>
+		</a>
+	</footer>
 </div>
 
 <script type="module" src="./js/main.js"></script>
