--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
 	<meta charset="UTF-8">
@@ -11,6 +11,7 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
 
+	<script type="module" src="./js/themePreference.js"></script>
 	<title>Social Media Dashboard</title>
 </head>
 
@@ -23,11 +24,14 @@
 			<p class="sub-heading">Total Followers: 23,004</p>
 		</div>
 
-		<hr>
+		<div class="divider"></div>
 
 		<div class="theme-toggle">
-			<label for="checkbox">Dark Mode</label>
-			<input type="checkbox" id="checkbox">
+			<span>Dark Mode</span>
+			<label for="checkbox" id="toggle-slider">
+				<input type="checkbox" id="checkbox" aria-labelledby="toggle-slider">
+				<span class="toggle-slider"></span>
+			</label>
 		</div>
 	</header>
 
