Complete styles for large screen devices

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	</header>
 
 	<main>
-		<section class="followers">
+		<section class="followers mq-grid">
 			<div class="followers-card followers-card--blue">
 				<div class="followers-card__group followers-card__handle">
 					<img src="/images/icon-facebook.svg" alt="">
@@ -101,7 +101,7 @@
 		<section class="overview">
 			<h2 class="overview__heading">Overview - Today</h2>
 
-			<div class="overview__grid">
+			<div class="overview__container mq-grid">
 				<div class="overview-card">
 					<div class="overview-card__group">
 						<span>Page Views</span>
