Add gradient top border for instagram card

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				</div>
 			</div>
 
-			<div class="followers-card">
+			<div class="followers-card followers-card--gradient">
 				<div class="followers-card__group followers-card__handle">
 					<img src="/images/icon-instagram.svg" alt="">
 					<span>@realnathanf</span>
