Add meta description and set explicit width and height for images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="color-scheme" content="light dark">
+	<meta name="description" content="My solution for the Social Media Dashboard challenge from Frontendmentor.io">
 
 	<!-- Favicons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
@@ -39,7 +39,7 @@
 		<section class="followers mq-grid">
 			<div class="followers-card followers-card--blue">
 				<div class="followers-card__group followers-card__handle">
-					<img src="/images/icon-facebook.svg" alt="">
+					<img src="/images/icon-facebook.svg" alt="" width="20" height="20">
 					<span>@nathanf</span>
 				</div>
 
@@ -47,14 +47,14 @@
 				<p class="followers-card__type">FOLLOWERS</p>
 
 				<div class="followers-card__group followers-card__update">
-					<img src="/images/icon-up.svg" alt="">
+					<img src="/images/icon-up.svg" alt="" width="8" height="4">
 					<span class="followers-card__success">12 Today</span>
 				</div>
 			</div>
 
 			<div class="followers-card followers-card--light-blue">
 				<div class="followers-card__group followers-card__handle">
-					<img src="/images/icon-twitter.svg" alt="">
+					<img src="/images/icon-twitter.svg" alt="" width="20" height="17">
 					<span>@nathanf</span>
 				</div>
 
@@ -62,14 +62,14 @@
 				<p class="followers-card__type">FOLLOWERS</p>
 
 				<div class="followers-card__group followers-card__update">
-					<img src="/images/icon-up.svg" alt="">
+					<img src="/images/icon-up.svg" alt="" width="8" height="4">
 					<span class="followers-card__success">99 Today</span>
 				</div>
 			</div>
 
 			<div class="followers-card followers-card--gradient">
 				<div class="followers-card__group followers-card__handle">
-					<img src="/images/icon-instagram.svg" alt="">
+					<img src="/images/icon-instagram.svg" alt="" width="20" height="20">
 					<span>@realnathanf</span>
 				</div>
 
@@ -77,14 +77,14 @@
 				<p class="followers-card__type">FOLLOWERS</p>
 
 				<div class="followers-card__group followers-card__update">
-					<img src="/images/icon-up.svg" alt="">
+					<img src="/images/icon-up.svg" alt="" width="8" height="4">
 					<span class="followers-card__success">1099 Today</span>
 				</div>
 			</div>
 
 			<div class="followers-card followers-card--red">
 				<div class="followers-card__group followers-card__handle">
-					<img src="/images/icon-youtube.svg" alt="">
+					<img src="/images/icon-youtube.svg" alt="" width="20" height="20">
 					<span>Nathan F.</span>
 				</div>
 
@@ -92,7 +92,7 @@
 				<p class="followers-card__type">FOLLOWERS</p>
 
 				<div class="followers-card__group followers-card__update">
-					<img src="/images/icon-down.svg" alt="">
+					<img src="/images/icon-down.svg" alt="" width="8" height="4">
 					<span class="followers-card__fail">144 Today</span>
 				</div>
 			</div>
@@ -105,13 +105,13 @@
 				<div class="overview-card">
 					<div class="overview-card__group">
 						<span>Page Views</span>
-						<img src="/images/icon-facebook.svg" alt="">
+						<img src="/images/icon-facebook.svg" alt="" width="20" height="20">
 					</div>
 
 					<div class="overview-card__group">
 						<span class="overview-card__number">87</span>
 						<div class="overview-card__group overview-card__percentage">
-							<img src="/images/icon-up.svg" alt="">
+							<img src="/images/icon-up.svg" alt="" width="8" height="4">
 							<p class="overview-card__success">3%</p>
 						</div>
 					</div>
@@ -120,13 +120,13 @@
 				<div class="overview-card">
 					<div class="overview-card__group">
 						<span>Likes</span>
-						<img src="/images/icon-facebook.svg" alt="">
+						<img src="/images/icon-facebook.svg" alt="" width="20" height="20">
 					</div>
 
 					<div class="overview-card__group">
 						<span class="overview-card__number">52</span>
 						<div class="overview-card__group overview-card__percentage">
-							<img src="/images/icon-down.svg" alt="">
+							<img src="/images/icon-down.svg" alt="" width="8" height="4">
 							<p class="overview-card__fail">2%</p>
 						</div>
 					</div>
@@ -135,13 +135,13 @@
 				<div class="overview-card">
 					<div class="overview-card__group">
 						<span>Likes</span>
-						<img src="/images/icon-instagram.svg" alt="">
+						<img src="/images/icon-instagram.svg" alt="" width="20" height="20">
 					</div>
 
 					<div class="overview-card__group">
 						<span class="overview-card__number">5462</span>
 						<div class="overview-card__group overview-card__percentage">
-							<img src="/images/icon-up.svg" alt="">
+							<img src="/images/icon-up.svg" alt="" width="8" height="4">
 							<p class="overview-card__success">2257%</p>
 						</div>
 					</div>
@@ -150,13 +150,13 @@
 				<div class="overview-card">
 					<div class="overview-card__group">
 						<span>Profile Views</span>
-						<img src="/images/icon-instagram.svg" alt="">
+						<img src="/images/icon-instagram.svg" alt="" width="20" height="20">
 					</div>
 
 					<div class="overview-card__group">
 						<span class="overview-card__number">52k</span>
 						<div class="overview-card__group overview-card__percentage">
-							<img src="/images/icon-up.svg" alt="">
+							<img src="/images/icon-up.svg" alt="" width="8" height="4">
 							<p class="overview-card__success">1375%</p>
 						</div>
 					</div>
@@ -165,13 +165,13 @@
 				<div class="overview-card">
 					<div class="overview-card__group">
 						<span>Retweets</span>
-						<img src="/images/icon-twitter.svg" alt="">
+						<img src="/images/icon-twitter.svg" alt="" width="20" height="17">
 					</div>
 
 					<div class="overview-card__group">
 						<span class="overview-card__number">117</span>
 						<div class="overview-card__group overview-card__percentage">
-							<img src="/images/icon-up.svg" alt="">
+							<img src="/images/icon-up.svg" alt="" width="8" height="4">
 							<p class="overview-card__success">303%</p>
 						</div>
 					</div>
@@ -180,13 +180,13 @@
 				<div class="overview-card">
 					<div class="overview-card__group">
 						<span>Likes</span>
-						<img src="/images/icon-twitter.svg" alt="">
+						<img src="/images/icon-twitter.svg" alt="" width="20" height="17">
 					</div>
 
 					<div class="overview-card__group">
 						<span class="overview-card__number">507</span>
 						<div class="overview-card__group overview-card__percentage">
-							<img src="/images/icon-up.svg" alt="">
+							<img src="/images/icon-up.svg" alt="" width="8" height="4">
 							<p class="overview-card__success">553%</p>
 						</div>
 					</div>
@@ -195,13 +195,13 @@
 				<div class="overview-card">
 					<div class="overview-card__group">
 						<span>Likes</span>
-						<img src="/images/icon-youtube.svg" alt="">
+						<img src="/images/icon-youtube.svg" alt="" width="20" height="20">
 					</div>
 
 					<div class="overview-card__group">
 						<span class="overview-card__number">107</span>
 						<div class="overview-card__group overview-card__percentage">
-							<img src="/images/icon-down.svg" alt="">
+							<img src="/images/icon-down.svg" alt="" width="8" height="4">
 							<p class="overview-card__fail">19%</p>
 						</div>
 					</div>
@@ -210,13 +210,13 @@
 				<div class="overview-card">
 					<div class="overview-card__group">
 						<span>Total Views</span>
-						<img src="/images/icon-youtube.svg" alt="">
+						<img src="/images/icon-youtube.svg" alt="" width="20" height="20">
 					</div>
 
 					<div class="overview-card__group">
 						<span class="overview-card__number">1407</span>
 						<div class="overview-card__group overview-card__percentage">
-							<img src="/images/icon-down.svg" alt="">
+							<img src="/images/icon-down.svg" alt="" width="8" height="4">
 							<p class="overview-card__fail">12%</p>
 						</div>
 					</div>
